--- a/Sicsoft.Checkin.Web/appsettings.json
+++ b/Sicsoft.Checkin.Web/appsettings.json
@@ -9,7 +9,8 @@
 
   "UrlWebApi": "https://localhost:44350", //xxxhttps://localhost:44350
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BusquedaPor":  "C"
 
 
 }
