--- a/Sicsoft.Checkin.Web/appsettings.json
+++ b/Sicsoft.Checkin.Web/appsettings.json
@@ -10,7 +10,7 @@
   "UrlWebApi": "https://localhost:44350", //xxxhttps://localhost:44350
 
   "AllowedHosts": "*",
-  "BusquedaPor":  "C"
+  "BusquedaPor":  "P"
 
 
 }
