--- a/Sicsoft.Checkin.Web/appsettings.json
+++ b/Sicsoft.Checkin.Web/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
 
-  "UrlWebApi": "http://167.250.194.23:1184/WAboletaje", //"https://localhost:44350", //xxxhttps://localhost:44350
+  "UrlWebApi": "https://localhost:44350", //xxxhttps://localhost:44350
 
   "AllowedHosts": "*",
   "BusquedaPor": "P"
