--- a/Sicsoft.Checkin.Web/appsettings.json
+++ b/Sicsoft.Checkin.Web/appsettings.json
@@ -11,7 +11,8 @@
 
   "AllowedHosts": "*",
   "BusquedaPor": "C",
-  "AceptarCotizaciones":  "1"
+  "AceptarCotizaciones": "1",
+  "Empresa": "P"
 
 
 }
